--- a/index.html
+++ b/index.html
@@ -2,12 +2,42 @@
 <html>
 <head>
 	<title>Casio Calculator Watch</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-	<img src="https://imageshack.com/a/img923/6195/vo2NTE.png"></img>
-	<script type="text/javascript" src="casio.js"></script>
+	<div class="watch-container">
+		<div class="watch-base">
+			<div class="watch-screen">
+				<p>0123</p>
+			</div>
+			<div class="watch-numpad">
+				<button class="key number">0</button>
+				<button class="key number">1</button>
+				<button class="key number">2</button>
+				<button class="key number">3</button>
+				<button class="key number">4</button>
+				<button class="key number">5</button>
+				<button class="key number">6</button>
+				<button class="key number">7</button>
+				<button class="key number">8</button>
+				<button class="key number">9</button>
+				<button class="key operator">-</button>
+				<button class="key operator">+</button>
+				<button class="key operator">x</button>
+				<button class="key operator">/</button>
+				<button class="key cmdkey equals">=</button>
+				<button class="key cmdkey clear">CE</button>
+			</div>		
+		</div>
+	</div>
+
+
+
+
+
+
+	<script type="text/javascript" src="scripts/casio.js"></script>
 </body>
 </html>
