work out baseline calculator logic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="watch-container">
 		<div class="watch-base">
 			<div class="watch-screen">
-				<p>0123</p>
+				<p id="display-screen"></p>
 			</div>
 			<div class="watch-numpad">
 				<button class="key number">0</button>
