fix several calculator bugs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<button class="key operator">-</button>
 				<button class="key operator">+</button>
 				<button class="key operator">x</button>
-				<button class="key operator">/</button>
+				<button class="key operator">÷</button>
 				<button class="key cmdkey equals">=</button>
 				<button class="key cmdkey clear">CE</button>
 			</div>		
