fix equals operator bug, improve ui

--- a/index.html
+++ b/index.html
@@ -13,22 +13,31 @@
 				<p id="display-screen"></p>
 			</div>
 			<div class="watch-numpad">
-				<button class="key number">0</button>
-				<button class="key number">1</button>
-				<button class="key number">2</button>
-				<button class="key number">3</button>
-				<button class="key number">4</button>
-				<button class="key number">5</button>
-				<button class="key number">6</button>
-				<button class="key number">7</button>
-				<button class="key number">8</button>
-				<button class="key number">9</button>
-				<button class="key operator">-</button>
-				<button class="key operator">+</button>
-				<button class="key operator">x</button>
-				<button class="key operator">÷</button>
-				<button class="key cmdkey equals">=</button>
-				<button class="key cmdkey clear">CE</button>
+				<div class="key-row row-0">
+					<button class="key number">7</button>
+					<button class="key number">8</button>
+					<button class="key number">9</button>
+					<button class="key operator">÷</button>
+				</div>
+				<div class="key-row row-1">
+					<button class="key number">4</button>
+					<button class="key number">5</button>
+					<button class="key number">6</button>
+					<button class="key operator">x</button>
+				</div>
+				<div class="key-row row-2">
+					<button class="key number">1</button>
+					<button class="key number">2</button>
+					<button class="key number">3</button>
+					<button class="key operator">-</button>
+					
+				</div>
+				<div class="key-row row-3">
+					<button class="key number">0</button>
+					<button class="key cmdkey clear">CE</button>
+					<button class="key cmdkey equals">=</button>
+					<button class="key operator">+</button>
+				</div>
 			</div>		
 		</div>
 	</div>
