--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 			</div>		
 		</div>
 	</div>
-
+	<div class="watch-side">
+		<button class="key side-button">Mode</button>
+		<button class="key side-button">Clear</button>
+	</div>
 
 
 
