add in watch logic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 	<div class="watch-container">
 		<div class="watch-base">
 			<div class="watch-screen">
-				<p id="display-screen"></p>
+				<p id="calc-display" style="display: none"></p>
+				<div class="clock">
+					<p id="week-day"></p>
+					<p id="time"></p>
+					<p id="period"></p>
+				</div>
 			</div>
 			<div class="watch-numpad">
 				<div class="key-row row-0">
@@ -30,7 +35,6 @@
 					<button class="key number">2</button>
 					<button class="key number">3</button>
 					<button class="key operator">-</button>
-					
 				</div>
 				<div class="key-row row-3">
 					<button class="key number">0</button>
