impliment logic to handle leading decimals

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				</div>
 				<div class="key-row row-3">
 					<button class="key number">0</button>
-					<button class="key cmdkey clear">CE</button>
+					<button class="key number">.</button>
 					<button class="key cmdkey equals">=</button>
 					<button class="key operator">+</button>
 				</div>
