design responsive screen and connect js logic

--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,8 @@
 				</div>
 				<div class="flex-col-2">
 					<div class="face-flex-row-1">
-						
+						<p id="amPm-text">PM</p> <p id="day-text">MO<p>
+						<p id="display-text">10:00 36</p>
 					</div>
 					<div class="face-flex-row-2">
 					</div>
@@ -50,11 +51,11 @@
 				<div class="flex-col-4 side-buttons">
 					<div class="side-flex-row-1">
 					</div>
-					<div class="side-flex-row-2">
+					<div class="side-flex-row-2" id="mode">
 					</div>
 					<div class="side-flex-row-3">
 					</div>
-					<div class="side-flex-row-4">
+					<div class="side-flex-row-4" id="clear">
 					</div>
 					<div class="side-flex-row-5">
 					</div>
@@ -64,6 +65,6 @@
 	</div>
 
 
-	<script type="text/javascript" src="scripts/casio.js"></script>
+	<script type="text/javascript" src="scripts/casio2.js"></script>
 </body>
 </html>
